# PromptStorm

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: promptstorm-handout.md  promptstorm-understanding-answers.md  promptstorm-understanding-questions.md
docs/superpowers/plans/: 2026-06-05-promptstorm-cli.md
docs/superpowers/specs/: 2026-06-05-promptstorm-cli-design.md  2026-06-05-promptstorm-session-modes-design.md
examples/program-internals/: index.html  style.css
src/promptstorm/: __init__.py  audit.py  cli.py  config.py  engine.py  models.py  modes.py  provider.py  reporter.py
tests/: promptstorm_testdata.py  test_audit.py  test_cli_entrypoint.py  test_config.py  test_engine.py  test_engine_streaming.py  test_modes.py  test_no_token_accounting.py  test_reporter.py  test_sample_data.py
