[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptstorm-cli"
version = "0.1.0"
description = "Terminal debate tool with two AI models, human steering, and terminal conclusions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
promptstorm = "promptstorm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
